update the css to fix image stretching

--- a/themes/hugo-goa/static/css/custom.css
+++ b/themes/hugo-goa/static/css/custom.css
@@ -1,1 +1,5 @@
 /* Add custom CSS here. */
+
+img {
+    max-width: 100%;
+}
